# Orchestrarium

./: .gitignore  LICENSE  README.md  claude-agent-manager-spec.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md  01-SUMMARY.md
.planning/phases/02-react-ui-core/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-RESEARCH.md  02-SUMMARY.md
.planning/phases/03-live-updates/: 03-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: update-readme-download-links.mjs
src/: App.tsx  bindings.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_md.rs  commands.rs  groups.rs  lib.rs  main.rs  mcp.rs  mcp_profiles.rs  models.rs  parser.rs  scanner.rs  setups.rs  state.rs  toggler.rs  watcher.rs
src/components/: ActiveItemsList.tsx  AgentCard.tsx  AgentGroup.tsx  AgentList.tsx  Badge.test.tsx  Badge.tsx  ClaudeMdPage.tsx  ColorDot.test.tsx  ColorDot.tsx  CommandPills.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorBoundary.tsx  FilterPills.test.tsx  FilterPills.tsx  Header.tsx  LibraryPage.tsx  McpLiveServersView.tsx  McpPage.test.tsx  McpPage.tsx  McpProfilesView.tsx  PreviewModal.tsx  ProjectEmptyState.test.tsx  SearchBar.tsx  SettingsModal.tsx  SetupPage.tsx  SetupsBar.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBar.tsx  SummaryCard.test.tsx  SummaryCard.tsx  TitleBar.tsx  Toast.tsx  Toggle.test.tsx  Toggle.tsx  TutorialModal.test.tsx  TutorialModal.tsx
src/lib/: contextSwitch.test.ts  store.ts  useEscapeKey.test.ts  useEscapeKey.ts  validateName.test.ts  validateName.ts
src/test/: setup.ts
(+1 files in other folders)
