[package]
name = "claude-agent-manager"
version = "0.1.0"
description = "Claude Agent Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "cam_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gray_matter = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
notify = "8"
notify-debouncer-mini = "0.6"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
dirs = "6"

[dev-dependencies]
tempfile = "3"
