[package]
name = "orchestrarium"
version = "0.2.5"
description = "Orchestrarium — Workspace Manager for Agent Configurations"
authors = ["you"]
edition = "2021"

[lib]
name = "orchestrarium_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gray_matter = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
notify = "8"
notify-debouncer-mini = "0.6"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
dirs = "6"
dunce = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = "2.4.0"

[dev-dependencies]
tempfile = "3"
